--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-
+{
+    "main": "dist/main.js",
+    "scripts": {
+      "start": "tsc && node dist/main.js"
+    },
+    "dependencies": {
+      "electron": "^13.1.7"
+    },
+    "devDependencies": {
+      "typescript": "^4.3.5"
+    }
+  }
